fileOut goes straight to Downloads — no path dialog; README rewritten concise
The Cuis fileout flow asked the user to "Confirm or enter path and file name"
with an app-internal path (/data/user/0/au.com.darkside.x11server/…) that is
both inaccessible and leaks internals. Now the app writes a per-boot
android-setup.st (passed via -s; it chains pending-filein.st and dev-tests.st
itself, so it owns the single -s slot) that:

- recompiles DirectoryEntry class>>userDirectory:queryFileName:writeStreamDo:
  to write silently into the image folder — the fileout watcher then exports
  the file to Downloads/OpenSmalltalk/ automatically. fileOut = file lands in
  Downloads, zero questions.
- pre-seeds author initials ('and'/Android) when unset, so neither our patch
  compile nor plain file-ins ever pop the initials request (the empty-initials
  getter otherwise opens a modal — the classic early-startup hang pattern).
- everything is looked up via Smalltalk at: and wrapped in on:Error, so Squeak
  and older images skip the patches quietly.

Verified E2E on a freshly downloaded Cuis 7.7: ANDROID-SETUP fileout-patch OK
in logcat, the patched method writes with no dialog, and the file appears in
/sdcard/Download/OpenSmalltalk/ with the right content.

README: rewritten for a newcomer — what it is, install, what you can do, how
it works, build pointers. Dropped the stale release references and ~230 lines
of detail that lives in docs/ and CLAUDE.md.

versionCode 36 / versionName 1.36.